apollo-router/src/configuration/snapshots/apollo_router__configuration__expansion__test__dev_mode.snap
---
source: apollo-router/src/configuration/expansion.rs
expression: value
---
connectors:
  debug_extensions: true
expose_query_plan: true
homepage:
  enabled: false
  some_other_config: should remain
include_subgraph_errors:
  all: true
sandbox:
  enabled: true
supergraph:
  introspection: true
telemetry:
  exporters:
    tracing:
      response_trace_id:
        enabled: true
