apollo-router/src/configuration/snapshots/apollo_router__configuration__expansion__test__dollar_escape.snap
---
source: apollo-router/src/configuration/expansion.rs
expression: result
---
edges: $start and end$
literal_dollar: some$api$key
mixed: "https://api.example.com/path?price=$100"
multiple_escapes: $first $second $third
plain: no dollars here
