apollo-router/src/configuration/snapshots/apollo_router__configuration__expansion__test__env_defaults.snap
---
source: apollo-router/src/configuration/expansion.rs
expression: value
---
hi: there
telemetry:
  apollo:
    endpoint: "${env.APOLLO_USAGE_REPORTING_INGRESS_URL:-https://usage-reporting.api.apollographql.com/api/ingress/traces}"

