apollo-router/src/configuration/snapshots/apollo_router__configuration__expansion__test__type_coercion.snap
---
source: apollo-router/src/configuration/expansion.rs
expression: value
---
no_env_bool: true
no_env_numeric: 2
no_env_string: defaulted_string
overridden_bool: true
overridden_incorrect_type: "true"
overridden_numeric: 1
overridden_string: overridden_string

