apollo-router/src/configuration/snapshots/apollo_router__configuration__expansion__test__unprefixed.snap
---
source: apollo-router/src/configuration/expansion.rs
expression: value
---
defaulted: defaulted
expanded: expanded
overridden: overridden

